feat(location): add geographic distance calculation methods
Added methods to calculate distances between geographic locations using the Haversine formula.