@@ -1,15 +1,11 @@
 package itacademy.pawalert.infrastructure.persistence.alert;
 
-import aj.org.objectweb.asm.commons.Remapper;
 import itacademy.pawalert.application.port.outbound.AlertEventRepositoryPort;
 import itacademy.pawalert.domain.alert.model.AlertEvent;
-
 import org.springframework.stereotype.Service;
-
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class AlertEventRepositoryAdapter implements AlertEventRepositoryPort {
@@ -31,8 +27,7 @@ public class AlertEventRepositoryAdapter implements AlertEventRepositoryPort {
     public List<AlertEvent> findByAlertIdOrderByChangedAtDesc(UUID alertId) {
         return eventRepository.findByAlertIdOrderByChangedAtDesc(alertId.toString())
                 .stream()
-                .map(AlertEventEntity::toDomain)
-                .collect(Collectors.toList());
+                .map(AlertEventEntity::toDomain).toList();
     }
 
     @Override
